# precious3-gpt

./: Hallmark Definition Demo.ipynb  LICENCE  README.md  environment.yml  setup.py
Notebooks/: Hallmark Definition Demo.ipynb
handlers/: p3_multimodal.py  p3_multimodal_handler.py
mpt_7b/: README.md  attention.py  ffn.py  modeling_mpt.py
p3gpt/handlers/: p3_multimodal_handler.py
p3gpt/mpt_7b/: LICENSE  blocks.py  configuration_mpt.py  warnings.py
p3gpt/p3screen/: __init__.py  screening.py
p3gpt/pubchem/: __init__.py  core.py  network.py
p3gpt/utils/: __init__.py  env_config.py
pypi_packaging/: README.md  pyproject.toml
